--- a/src/Componets/Common/Heading.css
+++ b/src/Componets/Common/Heading.css
@@ -19,3 +19,9 @@ header {
     height: 100%;
     border-radius: 25px;
 }
+
+.heading a {
+    text-decoration: none;
+    color: white;
+    margin: 0 8px;
+}
