--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -8,7 +8,7 @@
 
 .home {
     box-sizing: border-box;
-    width: 60%;
+    width: 65%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
@@ -18,11 +18,21 @@
     grid-column: 1/2;
     grid-row: 1/2;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .about-me p, .about-me h4 {
     margin: 2px;
+}
+
+.about-me h1 {
+    font-size: 35px;
+}
+
+.about-me .text {
+    margin-bottom: 40px;
 }
 
 .portrait {
