--- a/src/Style/General.css
+++ b/src/Style/General.css
@@ -1,3 +1,17 @@
 a {
-    cursor: pointer;
+    cursor: pointer
+}
+
+.buttons  {
+    margin: 7px 12px;
+}
+
+.buttons a {
+    text-decoration: none;
+    color: rgb(0, 120, 0);
+    font-size: 14px;
+    font-weight: 700;
+    padding: 2px 3px;
+    border: 4px solid rgb(0, 0, 155);
+    border-radius: 4px;
 }
