--- a/src/Componets/Common/Footer.css
+++ b/src/Componets/Common/Footer.css
@@ -20,9 +20,42 @@ footer {
     border-radius: 25px;
 }
 
+.footer h3 {
+    font-size: 16px;
+}
+
+.footer h3 a {
+    font-size: 16px;
+}
+
 .footer a {
     text-decoration: none;
     font-size: 20px;
     color: white;
     margin: 0 8px;
+}
+
+
+@media screen and (max-width: 640px) {
+    
+    .footer {
+        padding: 0px 20px 25px 20px;
+        width: 100%;
+        border-radius: 0px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    
+    .footer {
+        padding: 0px 20px 25px 20px;
+    }
+
+    .footer h3 {
+        font-size: 12px;
+    }
+    
+    .footer h3 a {
+        font-size: 12px;
+    }
 }
