--- a/src/Componets/Common/Heading.css
+++ b/src/Componets/Common/Heading.css
@@ -25,3 +25,31 @@ header {
     color: white;
     margin: 0 8px;
 }
+
+@media screen and (max-width: 640px) {
+
+    header {
+        height: 70px;
+    }
+    
+    .heading {
+        padding: 22px 20px 0 20px;
+        width: 100%;
+        border-radius: 0px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    
+    .heading {
+        padding: 22px 15px 0 10px;
+    }
+
+    .heading h1 {
+        font-size: 20px;
+    }
+
+    .heading a {
+        margin: 0 5px;
+    }
+}
