--- a/src/Componets/Common/Heading.css
+++ b/src/Componets/Common/Heading.css
@@ -26,6 +26,39 @@ header {
     margin: 0 8px;
 }
 
+.hamburger {
+    display: none;
+}
+
+.hamburger button {
+    background-color: white;
+    color: rgb(0, 0, 155);
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    padding: 5px;
+    border: 0px;
+    border-radius: 3px;
+}
+
+.hamburger-bar {
+    background-color: rgb(0, 0, 155);
+    position: fixed;
+    top: 50px;
+    left: 0%;
+    height: 30px;
+    width: 100%;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hamburger-bar a {
+    margin: 0 10px;
+}
+
+
 @media screen and (max-width: 640px) {
 
     header {
@@ -36,6 +69,14 @@ header {
         padding: 22px 20px 0 20px;
         width: 100%;
         border-radius: 0px;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .hamburger {
+        display: flex;
     }
 }
 
