--- a/src/Style/General.css
+++ b/src/Style/General.css
@@ -17,6 +17,12 @@ a {
     margin: 0 3px;
 }
 
+.buttons a:hover {
+    color: rgb(0, 120, 0);
+    border: 4px solid rgb(0, 120, 0);
+    transition: 200ms;
+}
+
 @media screen and (max-width: 480px) {
     
     .buttons  {
