--- a/src/Componets/Skills/Skills.css
+++ b/src/Componets/Skills/Skills.css
@@ -25,6 +25,11 @@
     margin: 0 5px 0 0;
 }
 
+#img-html_css {
+    width: 90px;
+    margin: 0 5px 0 0;
+}
+
 
 @media screen and (max-width: 640px) {
     
