--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .home {
@@ -12,6 +13,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    opacity: 0.3;
+    transform: translateX(50%);
 }
 
 .about-me {
