--- a/src/Componets/Common/Footer.css
+++ b/src/Componets/Common/Footer.css
@@ -35,6 +35,13 @@ footer {
     margin: 0 8px;
 }
 
+@media screen and (max-width: 900px) {
+    
+    .footer {
+        width: 75%;
+    }
+}
+
 
 @media screen and (max-width: 640px) {
     
