--- a/src/Componets/Common/Heading.css
+++ b/src/Componets/Common/Heading.css
@@ -75,6 +75,13 @@ header {
     margin: 4px 0;
 }
 
+@media screen and (max-width: 900px) {
+    
+    .heading {
+        width: 78%;
+    }
+}
+
 
 @media screen and (max-width: 640px) {
 
