--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -51,6 +51,13 @@
     border-radius: 20px;
 }
 
+@media screen and (max-width: 900px) {
+    
+    .home {
+        width: 75%;
+    }
+}
+
 
 @media screen and (max-width: 640px) {
     
