--- a/src/Componets/Skills/Skills.css
+++ b/src/Componets/Skills/Skills.css
@@ -2,6 +2,8 @@
     width: 60%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    opacity: 0.3;
+    transform: translateX(50%);
 }
 
 .main-skills {
