--- a/src/Componets/Common/Heading.css
+++ b/src/Componets/Common/Heading.css
@@ -21,7 +21,12 @@ header {
     border-radius: 25px;
 }
 
-.heading a {
+h1 a {
+    color: white;
+    text-decoration: none;
+}
+
+.nav a {
     text-decoration: none;
     color: white;
     padding: 3px;
@@ -32,7 +37,7 @@ header {
     border-radius: 3px;
 }
 
-.heading a:hover {
+.nav a:hover {
     background-color: white;
     color: rgb(0, 0, 155);
     transition: 200ms;
@@ -67,6 +72,8 @@ header {
 }
 
 .hamburger-bar a {
+    color: white;
+    text-decoration: none;
     font-size: 12px;
     padding: 2px;
     font-weight: 500;
