--- a/src/Componets/Skills/Skills.css
+++ b/src/Componets/Skills/Skills.css
@@ -1,14 +1,22 @@
 .skills {
     width: 60%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     opacity: 0.3;
     transform: translateX(50%);
 }
 
 .main-skills {
     box-sizing: border-box;
-    grid-column: 1/2;
+    grid-row: 1/2;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.other-skills {
     width: 90%;
     display: flex;
     flex-wrap: wrap;
@@ -19,16 +27,19 @@
 .skill {
     display: flex;
     align-items: center;
-    margin: 8px 12px;
+    padding: 0 8px;
+    border: 4px solid rgb(0, 0, 155);
+    border-radius: 4px;
+    margin: 8px 10px;
 }
 
 .skill img {
-    width: 40px;
+    width: 30px;
     margin: 0 5px 0 0;
 }
 
 #img-html_css {
-    width: 90px;
+    width: 80px;
     margin: 0 5px 0 0;
 }
 
@@ -36,15 +47,28 @@
 @media screen and (max-width: 640px) {
     
     .skills {
-        width: 80%;
+        padding-top: 85px;
+        width: 92%;
+    }
+
+    .main-skills {
+        width: 99%;
+    }
+
+    .other-skills {
+        width: 99%;
     }
     
     .skill {
-        margin: 4px 12px;
+        margin: 4px 8px;
     }
     
     .skill img {
-        width: 30px;
+        width: 25px;
+    }
+
+    #img-html_css {
+        width: 50px;
     }
 }
 
