--- a/src/Componets/About/About.css
+++ b/src/Componets/About/About.css
@@ -4,6 +4,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    opacity: 0.3;
+    transform: translateX(50%);
 }
 
 .about-text {
