--- a/src/Componets/Projects/Projects.css
+++ b/src/Componets/Projects/Projects.css
@@ -24,7 +24,7 @@
 }
 
 .project-link:hover {
-    border: 3px solid rgb(0, 120, 0);
+    border: 4px solid rgb(0, 120, 0);
     transition: 200ms;
 }
 
@@ -35,11 +35,16 @@
     width: 100%;
 }
 
-.project-link img {
+.project-stack {
+    box-sizing: border-box;
+    width: 0;
+}
+
+.project-stack img {
     width: 27px;
     margin: 0;
     position: relative;
-    left: 45px;
+    left: 20px;
     padding-bottom: 5px;
     border-bottom: 2px solid rgb(0, 0, 155);
 }
