--- a/src/Componets/Common/Footer/Footer.scss
+++ b/src/Componets/Common/Footer/Footer.scss
@@ -9,8 +9,6 @@ footer {
 
 .footer {
     box-sizing: border-box;
-    background-color: rgb(0, 0, 155);
-    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -20,24 +18,58 @@ footer {
     border-radius: 25px;
 }
 
-.footer h3 {
-    font-size: 16px;
-}
-
-.footer h3 a {
-    font-size: 16px;
-}
-
-.footer a {
-    text-decoration: none;
-    font-size: 20px;
+.footer-white {
+    background-color: rgb(0, 0, 155);
     color: white;
-    margin: 0 8px;
+
+    h3 {
+        font-size: 16px;
+
+        a {
+            font-size: 16px;
+        }
+    }
+    
+    h3 a {
+        font-size: 16px;
+    }
+    
+    a {
+        text-decoration: none;
+        font-size: 20px;
+        color: white;
+        margin: 0 8px;
+
+        &:hover {
+        color: rgb(232, 236, 0);
+        transition: 200ms;
+        }
+    }
 }
 
-.footer a:hover {
-    color: rgb(232, 236, 0);
-    transition: 200ms;
+.footer-black {
+    background-color: #70e7d1;
+    color: black;
+    
+    h3 {
+        font-size: 16px;
+
+        a {
+            font-size: 16px;
+        }
+    }
+    
+    a {
+        text-decoration: none;
+        font-size: 20px;
+        color: black;
+        margin: 0 8px;
+
+        &:hover {
+            color: #df007c;
+            transition: 200ms;
+            }
+    }
 }
 
 @media screen and (max-width: 900px) {
