--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -1,123 +1,208 @@
 .home-page {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+}
+
+.home-page-white {
+  background-color: white;
+}
+.home-page-white .date {
+  color: rgb(0, 0, 155);
+  display: inline;
+}
+.home-page-white .name {
+  display: inline;
+  color: rgb(0, 120, 0);
+}
+.home-page-white .skill {
+  border: 4px solid rgb(0, 0, 155);
+}
+.home-page-white .skill-name {
+  color: rgb(0, 120, 0);
+}
+.home-page-white .project-link {
+  background-color: rgb(0, 0, 155);
+}
+.home-page-white .project-link a {
+  color: white;
+}
+.home-page-white .project-link:hover {
+  border: 4px solid rgb(0, 120, 0);
+  transition: 200ms;
+}
+.home-page-white .coming-soon {
+  display: inline;
+  font-size: 20px;
+  color: rgb(0, 120, 0);
+}
+.home-page-white .coming-project {
+  display: inline;
+  color: rgb(0, 0, 155);
+}
+.home-page-white .project-stack img {
+  border-bottom: 2px solid rgb(0, 0, 155);
+}
+.home-page-white .project-image img {
+  border: 3px solid rgb(0, 0, 155);
+}
+.home-page-white .project-arrow {
+  color: rgb(0, 120, 0);
+}
+.home-page-white .stack-color {
+  color: rgb(0, 120, 0);
+}
+.home-page-white .about-text h3 {
+  color: rgb(0, 0, 155);
+}
+
+.home-page-black {
+  background-color: black;
+  color: white;
+}
+.home-page-black .date {
+  color: #70e7d1;
+  display: inline;
+}
+.home-page-black .name {
+  display: inline;
+  color: #df007c;
+}
+.home-page-black .skill {
+  border: 4px solid #70e7d1;
+}
+.home-page-black .skill-name {
+  color: #df007c;
+}
+.home-page-black .project-link {
+  background-color: #70e7d1;
+}
+.home-page-black .project-link a {
+  color: black;
+}
+.home-page-black .project-link:hover {
+  border: 4px solid #df007c;
+  transition: 200ms;
+}
+.home-page-black .coming-soon {
+  display: inline;
+  font-size: 20px;
+  color: #df007c;
+}
+.home-page-black .coming-project {
+  display: inline;
+  color: #70e7d1;
+}
+.home-page-black .project-stack img {
+  border-bottom: 2px solid #70e7d1;
+}
+.home-page-black .project-image img {
+  border: 3px solid #70e7d1;
+}
+.home-page-black .project-arrow {
+  color: #df007c;
+}
+.home-page-black .stack-color {
+  color: #df007c;
+}
+.home-page-black .about-text h3 {
+  color: #70e7d1;
 }
 
 .home {
-    box-sizing: border-box;
-    width: 65%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    opacity: 0.3;
-    transform: translateX(50%);
+  box-sizing: border-box;
+  width: 65%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  opacity: 0.3;
+  transform: translateX(50%);
 }
 
 .about-me {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
-
 .about-me p, .about-me h4 {
-    margin: 2px;
+  margin: 2px;
 }
-
 .about-me h1 {
-    font-size: 35px;
+  font-size: 35px;
 }
-
 .about-me .text {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .portrait {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
-
 .portrait img {
-    width: 300px;
-    border-radius: 20px;
+  width: 300px;
+  border-radius: 20px;
 }
 
 @media screen and (max-width: 900px) {
-    
-    .home {
-        width: 75%;
-    }
+  .home {
+    width: 75%;
+  }
 }
-
-
 @media screen and (max-width: 640px) {
-    
-    .home {
-        width: 83%;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-    }
-
-    .about-me {
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-
-    .about-me p, .about-me h4 {
-        margin: 1px;
-    }
-    
-    .about-me h1 {
-        font-size: 28px;
-    }
-    
-    .about-me .text {
-        margin-bottom: 30px;
-    }
-    
-    .portrait {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        justify-content: center;
-    }
-
-    .portrait img {
-        width: 200px;
-    }
+  .home {
+    width: 83%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .about-me {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .about-me p, .about-me h4 {
+    margin: 1px;
+  }
+  .about-me h1 {
+    font-size: 28px;
+  }
+  .about-me .text {
+    margin-bottom: 30px;
+  }
+  .portrait {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    justify-content: center;
+  }
+  .portrait img {
+    width: 200px;
+  }
 }
-
-
 @media screen and (max-width: 480px) {
-    
-    .home {
-        height: 80%;
-        width: 95%;
-    }
-
-    .about-me p, .about-me h4 {
-        margin: 0px;
-    }
-    
-    .about-me h1 {
-        font-size: 23px;
-    }
-
-    .about-me h2 {
-        font-size: 27px;
-    }
-
-
-    .portrait img {
-        width: 180px;
-        margin-bottom: 20px;
-    }
+  .home {
+    height: 80%;
+    width: 95%;
+  }
+  .home p, .home h4 {
+    margin: 0px;
+  }
+  .home h1 {
+    font-size: 23px;
+  }
+  .home h2 {
+    font-size: 27px;
+  }
+  .portrait img {
+    width: 180px;
+    margin-bottom: 20px;
+  }
 }
+
+/*# sourceMappingURL=Home.css.map */
