--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -57,6 +57,11 @@
 .home-page-white .filter-buttons button:hover {
   border: 4px solid rgb(0, 120, 0);
 }
+.home-page-white .right {
+  background-color: white;
+  color: rgb(0, 120, 0);
+  border: 4px solid rgb(0, 0, 155);
+}
 
 .home-page-black {
   background-color: black;
@@ -109,6 +114,11 @@
 .home-page-black .filter-buttons button:hover {
   border: 4px solid #df007c;
 }
+.home-page-black .right {
+  background-color: black;
+  color: #df007c;
+  border: 4px solid #70e7d1;
+}
 
 .home {
   box-sizing: border-box;
@@ -149,13 +159,22 @@
   width: 300px;
   border-radius: 20px;
 }
-.portrait .show {
+.portrait .right {
   position: absolute;
-  top: 30%;
-  right: 33%;
+  top: -8%;
+  right: 20%;
+  font-size: 0px;
+  font-weight: 500;
+  padding: 2px 8px;
+  border-radius: 40px;
+  opacity: 0;
+  transform: translateY(30px);
 }
-.portrait .none {
-  display: none;
+.portrait .now {
+  font-size: 20px;
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 200ms;
 }
 
 @media screen and (max-width: 900px) {
