--- a/src/Componets/Home/Home.scss
+++ b/src/Componets/Home/Home.scss
@@ -70,6 +70,12 @@
             border: 4px solid rgb(0, 120, 0);
         }
     }
+
+    .right {
+        background-color: white;
+        color: rgb(0, 120, 0);
+        border: 4px solid rgb(0, 0, 155);
+    }
 }
 
 .home-page-black {
@@ -136,6 +142,12 @@
             border: 4px solid #df007c;
         }
     }
+
+    .right {
+        background-color: black;
+        color: #df007c;
+        border: 4px solid #70e7d1;
+    }
 }
 
 .home {
@@ -181,14 +193,23 @@
         border-radius: 20px;
     }
 
-    .show {
+    .right {
         position: absolute;
-        top: 30%;
-        right: 33%
+        top: -8%;
+        right: 20%;
+        font-size: 0px;
+        font-weight: 500;
+        padding: 2px 8px;
+        border-radius: 40px;
+        opacity: 0;
+        transform: translateY(30px);
     }
 
-    .none {
-        display: none;
+    .now {
+        font-size: 20px;
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 200ms;
     }
 }
 
