--- a/src/Componets/Home/Home.css
+++ b/src/Componets/Home/Home.css
@@ -228,6 +228,9 @@
     width: 180px;
     margin-bottom: 20px;
   }
+  .right {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=Home.css.map */
