--- a/src/Componets/Projects/Projects.css
+++ b/src/Componets/Projects/Projects.css
@@ -1,3 +1,13 @@
+.home-page-p {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    overflow-x: hidden;
+    padding-top: 80px;
+}
+
 .projects {
     width: 65%;
     text-align: center;
